Oppgradert gradle wrapper og spring dependency management Endret en del av oppsettet for Brreg #deploy-brreg-stub